refactoring to house website

--- a/src/app/modules/home/main-board/main-board.component.html
+++ b/src/app/modules/home/main-board/main-board.component.html
@@ -1,7 +1,7 @@
 <div class="board-container">
   <div class="row container-row" *ngFor="let chunk of chunkArray">
     <div *ngFor="let user of chunk">
-      <app-devs-frame [user]="user"></app-devs-frame>
+      <app-property-frame [user]="user"></app-property-frame>
     </div>
   </div>
 </div>
