--- a/src/app/modules/property-page/property-detail/property-detail.component.html
+++ b/src/app/modules/property-page/property-detail/property-detail.component.html
@@ -141,7 +141,7 @@
         <div class="similiar-developers">Similiar developers</div>
         <div class="devlist column">
           <div *ngFor="let user of users" class="card">
-            <app-devs-frame [user]="user"></app-devs-frame>
+            <app-property-frame [user]="user"></app-property-frame>
           </div>
         </div>
       </div>
