--- a/src/app/modules/register/register-private-user/register-private-user.component.html
+++ b/src/app/modules/register/register-private-user/register-private-user.component.html
@@ -3,7 +3,7 @@
   <div class="column background-filter" [ngClass]="[isMobile ? 'border-box-mobile' : 'border-box']"   *ngIf="!confirmPassword">
     <form (ngSubmit)="next()" [formGroup]="userForm" novalidate>
       <div class="row register-header">
-        Create an account and find a job
+        New Account
       </div>
       <div class="row full-width">
         <div class="width-100">
