--- a/src/app/modules/register/register/register.component.html
+++ b/src/app/modules/register/register/register.component.html
@@ -6,10 +6,10 @@
     </div>
     <div class="row full-width">
       <div class="div-btn">
-        <button class="register-btn" mat-raised-button color="primary" (click)="goToDeveloper()">I am a developer</button>
+        <button class="register-btn" mat-raised-button color="primary" (click)="goToPrivateUser()">Private User</button>
       </div>
       <div class="div-btn">
-        <button class="register-btn" mat-raised-button color="accent" (click)="goToCompany()">I am a company</button>
+        <button class="register-btn" mat-raised-button color="accent" (click)="goToCompany()">Professional</button>
       </div>
     </div>
   </div>
