--- a/src/styles.scss
+++ b/src/styles.scss
@@ -120,6 +120,11 @@ body {
     padding: 2px;
 }
 
+.threefourth-width {
+    width: 70%;
+    padding: 2px;
+}
+
 .wrap {
     display: flex;
     width: 100%;
@@ -168,5 +173,5 @@ body {
     margin-bottom: 20px !important;
 }
 
-// mat radio 
+
 
