--- a/src/app/modules/home/home/home.component.html
+++ b/src/app/modules/home/home/home.component.html
@@ -1,3 +1,2 @@
-<app-filter-container (toogDevs)="toogDevs($event)" (toogJobs)="toogJobs($event)" ></app-filter-container>
-<app-devs-board *ngIf="toogleDevs"></app-devs-board>
-<app-jobs-board *ngIf="toogleJobs"></app-jobs-board>
+<app-filter-container></app-filter-container>
+<app-main-board></app-main-board>
