--- a/src/app/modules/register/register-company/register-company.component.html
+++ b/src/app/modules/register/register-company/register-company.component.html
@@ -1,7 +1,7 @@
 <div class="center">
   <div class="column background-filter border-box" *ngIf="!confirmPassword">
     <div class="row register-header">
-      Create company account
+      Create professional account
     </div>
     <div class="row full-width">
       <div class="width-50">
