--- a/src/app/modules/register/register-private-user/register-private-user.component.scss
+++ b/src/app/modules/register/register-private-user/register-private-user.component.scss
@@ -32,3 +32,13 @@
     font-size: larger;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+// Material Override PLACE TO STYLES
+
+::ng-deep .mat-form-field-flex > .mat-form-field-infix { padding: 0.4em 0px !important;}
+::ng-deep .mat-form-field-label-wrapper { top: -1.5em; }
+
+::ng-deep .mat-form-field-appearance-outline.mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label {
+    transform: translateY(-1.1em) scale(.75);
+    width: 133.33333%;
+}
