--- a/src/app/shared/component/navbar/navbar.component.html
+++ b/src/app/shared/component/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <!--DESKTOP NAVIGATION-->
 <div *ngIf="!isMobile">
   <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" href="#"><h3>High-Tech Contracting</h3></a>
+    <a class="navbar-brand" href="#"><h3>ImoRentals</h3></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -9,18 +9,21 @@
     <div class="collapse navbar-collapse flex" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">About us<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">About Us<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">FAQ<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">Buy<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Sell<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Rent<span class="sr-only">(current)</span></a>
         </li>
       </ul>
       <ul class="navbar-nav margin-left">
         <li class="nav-item">
-          <a class="nav-link">Upload your CV</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link">Post a Job</a>
+          <a class="nav-link">Add listing</a>
         </li>
         <li class="nav-item register" *ngIf="!authenticated">
           <a class="nav-link" [routerLink]="['/register']">Register</a>
@@ -49,17 +52,16 @@
     <button mat-icon-button (click)="snav.toggle()">
       <mat-icon class="nav-icon">menu</mat-icon>
     </button>
-    <h1 class="navbar-brand">High-Tech Contracting</h1>
+    <h1 class="navbar-brand">ImoRentals</h1>
   </mat-toolbar>
 
   <mat-sidenav-container>
     <mat-sidenav #snav>
       <mat-nav-list>
-        <a mat-list-item [routerLink]="['/admin']">Search Jobs & People</a>
-        <a mat-list-item [routerLink]="['']">About us</a>
-        <a mat-list-item [routerLink]="['/admin']">FAQ</a>
-        <a mat-list-item [routerLink]="['']">Upload your CV</a>
-        <a mat-list-item [routerLink]="['']">Post a Job</a>
+        <a mat-list-item [routerLink]="['/admin']">Buy</a>
+        <a mat-list-item [routerLink]="['']">Sell</a>
+        <a mat-list-item [routerLink]="['/admin']">Rent</a>
+        <a mat-list-item [routerLink]="['']">Add listing</a>
       </mat-nav-list>
     </mat-sidenav>
 
