card change to house

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -134,9 +134,13 @@ body {
 // Box shodow
 .background-filter {
    border-radius: 15px;
-   // box-shadow: 0 10px 6px -6px #777;
    box-shadow: 0 10px 60px -6px #777, 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
 }
+
+.background-filter-2 {
+    // border-radius: 10px;
+    box-shadow: 0 10px 60px -6px #777, 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+ }
 
 html,
 body {
