--- a/src/app/shared/component/property-frame/property-frame.component.scss
+++ b/src/app/shared/component/property-frame/property-frame.component.scss
@@ -1,75 +1,48 @@
-.devs-card-header {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-}
-
-.devs-card-job-title{
-    font-weight: bold;
-    color: royalblue;
-}
-
-.devs-card-header-developer-location {
-    color: grey;
-}
-
-.devs-card-header-name {
-    font-weight: bold;
-    font-size: large;
-}
-
-.image {
-    display: flex;
-    justify-content: center;
-    width: 30%;
-    > img {
-        border-radius: 30px;
-    }
-}
-
 .card {
     padding: 5px;
     width: 100%;
+    height: 200px;
 }
 
-.apply-button {
-    width: 30%;
-    border-radius: 20px;
-    margin-left: auto;
+.card-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
-.skill-title {
+.card-container-content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    margin-top: 5px;
+}
+
+.card-image {
+    height: 70%;
+}
+
+.charachteristics{
     display: flex;
     align-items: center;
-    justify-content: center;
-}
-
-.skill {
-    color: grey;
+    font-size: small;
     font-weight: bold;
-    background-color: rgb(235, 235, 235);
-    border-radius: 12px;
-    
-    padding-left: 4px;
-    padding-right: 4px;
 }
 
-.devs-card-content {
-    >div {
-        margin-left: 2px;
-    }
-}
-
-.date-posted {
-    color: grey;
+.address-price-row {
     display: flex;
+    flex-direction: row;
     align-items: center;
-}
 
-.view-profile {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: #0361ec;
-    margin-left: auto;
-    border-radius: 20px;
-    margin-bottom: 2px;
+    .address {
+        color: grey;
+        font-size: small;
+    }
+
+    .price {
+        margin-left: auto;
+        font-weight: bold;
+        color: rgb(89, 142, 255);
+        font-size: large;
+    }
 }
