--- a/src/app/modules/register/register-company/register-company.component.scss
+++ b/src/app/modules/register/register-company/register-company.component.scss
@@ -2,10 +2,16 @@
     width: 95%;
 }
 
+.register-company{
+    display: flex;
+    justify-content: center;
+    margin-top: -10%;
+}
+
 .border-box {
-    margin-top: 100px;
+    margin-top: 80px;
     padding: 15px;
-    width: 40%;
+    width: 100%;
 }
 
 .border-box-no-height{
