--- a/src/app/shared/component/property-frame/property-frame.component.html
+++ b/src/app/shared/component/property-frame/property-frame.component.html
@@ -1,14 +1,17 @@
-<div class="background-filter-2 card">
+<div class="card">
   <div class="card-container">
+
     <div class="card-image">
       <img [src]="image" width="100%" height="100%">
     </div>
+
     <div class="card-container-content">
       <div class="charachteristics">123 m2 | 4 bedrooms | 4 bathrooms</div>
       <div class="address-price-row">
-          <div class="address">Vila Nova de Famalicão, Braga</div>
-          <div class="price">123.000$</div>
+        <div class="address">Vila Nova de Famalicão, Braga</div>
+        <div class="price">123.000$</div>
       </div>
     </div>
+
   </div>
 </div>
