--- a/src/app/modules/home/main-board/main-board.component.scss
+++ b/src/app/modules/home/main-board/main-board.component.scss
@@ -4,7 +4,7 @@
     padding-top: 2%;
     padding-left: 5%;
     padding-right: 5%;
-    height: 100vh;
+    height: 150vh;
 }
 
 .container-row {
@@ -13,4 +13,58 @@
     > div {
         width: 24%;
     }
+}
+
+.text {
+    margin-bottom: 15px;
+}
+
+.title {
+    font-weight: bold;
+    font-size: large;
+}
+
+.seemore {
+    color: rgb(89, 142, 255);
+    font-size: small;
+    text-decoration: underline;
+}
+
+.container-promoted {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.container-new-listings {
+    margin-top: 10px;
+    margin-bottom: 80px;
+}
+
+.container-all-listings {
+    width: 100%;
+    .text-all-listings {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 40px;
+        .title-all-listings {
+            font-weight: bold;
+            font-size: x-large;
+        }
+    }
+}
+
+.statistics-container {
+    width: 100%;
+    height: 150px;
+}
+
+.statistics {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    justify-content: space-between;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
