--- a/src/app/modules/private/user-board/user-board.component.html
+++ b/src/app/modules/private/user-board/user-board.component.html
@@ -25,8 +25,8 @@
           photo_camera
         </span>
       </div>
-      <div class="column width-40 ">
-
+      <div class="column width-80">
+        <div class="row title-personal-info">Personal information</div>
         <div class="row">
           <div class="cell">
             <mat-form-field class="form-field" appearance="outline">
@@ -47,17 +47,7 @@
             </mat-form-field>
           </div>
         </div>
-        <div class="row width-100">
-          <div class="cell full-width">
-            <mat-form-field class="form-field width-100" appearance="outline">
-              <mat-label>Address</mat-label>
-              <input matInput [(ngModel)]="user.address" [ngModelOptions]="{standalone: true}">
-            </mat-form-field>
-          </div>
 
-        </div>
-      </div>
-      <div class="column width-40">
         <div class="row">
           <div class="cell">
             <mat-form-field class="form-field" appearance="outline">
@@ -68,24 +58,27 @@
           <div class="cell">
             <mat-form-field class="form-field" appearance="outline">
               <mat-label>Country</mat-label>
-              <input matInput [(ngModel)]="user.coutry" [ngModelOptions]="{standalone: true}" required>
+              <input matInput [(ngModel)]="user.country" [ngModelOptions]="{standalone: true}" required>
             </mat-form-field>
           </div>
         </div>
-
-
         <div class="row">
+          <div class="cell width-50_2">
+            <mat-form-field class="form-field width-100" appearance="outline">
+              <mat-label>Address</mat-label>
+              <input matInput [(ngModel)]="user.address" [ngModelOptions]="{standalone: true}">
+            </mat-form-field>
+          </div>
           <div class="cell">
             <mat-form-field class="form-field" appearance="outline">
               <mat-label>Tax Number</mat-label>
-              <input matInput [(ngModel)]="user.surname" [ngModelOptions]="{standalone: true}" required>
+              <input matInput [(ngModel)]="user.taxNumber" [ngModelOptions]="{standalone: true}" required>
               <mat-error>
                 Last Name is required
               </mat-error>
             </mat-form-field>
           </div>
         </div>
-
       </div>
     </div>
     <div class="row row-margin">
