--- a/src/app/modules/private/user-board/user-board.component.scss
+++ b/src/app/modules/private/user-board/user-board.component.scss
@@ -2,6 +2,11 @@
     margin-top: 2%;
 }
 
+.title-personal-info {
+    margin-left: 15px;
+    margin-bottom: 15px;
+}
+
 .board-container {
     display: flex;
     flex-direction: row;
