--- a/src/app/modules/property-page/property-detail/property-detail.component.html
+++ b/src/app/modules/property-page/property-detail/property-detail.component.html
@@ -15,7 +15,7 @@
                 <div class="last-name">{{user.surname}}</div>
               </div>
               <div class="job-position">.NET Developer</div>
-              <div class="location">{{user.city}}, {{user.coutry}}</div>
+              <div class="location">{{user.city}}, {{user.country}}</div>
             </div>
           </div>
           <!--ROW 2 HEADLINE-->
