--- a/src/app/shared/component/navbar/navbar.component.html
+++ b/src/app/shared/component/navbar/navbar.component.html
@@ -20,10 +20,13 @@
         <li class="nav-item active">
           <a class="nav-link" href="#">Rent<span class="sr-only">(current)</span></a>
         </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Properties < 100k<span class="sr-only">(current)</span></a>
+        </li>
       </ul>
       <ul class="navbar-nav margin-left">
         <li class="nav-item">
-          <a class="nav-link">Add listing</a>
+          <a class="nav-link" [routerLink]="['/add-listing']">Add listing</a>
         </li>
         <li class="nav-item register" *ngIf="!authenticated">
           <a class="nav-link" [routerLink]="['/register']">Register</a>
