rent room listing page

--- a/src/app/modules/add-listing/add-listing-sell/add-listing-sell.component.html
+++ b/src/app/modules/add-listing/add-listing-sell/add-listing-sell.component.html
@@ -174,7 +174,7 @@
         </div>
         <!--LINE 8-->
         <div class="row width-80">
-            <button class="list" mat-raised-button>Publish listing</button>
+            <button class="list" mat-raised-button (click)="publishListing()">Publish listing</button>
         </div>
     </div>
 </div>
