--- a/src/app/modules/add-listing/add-listing.component.html
+++ b/src/app/modules/add-listing/add-listing.component.html
@@ -1,4 +1,10 @@
-<div class="center">
-    <button class="sell-button" color="primary" mat-button [routerLink]="['/add-listing/sell']">Sell</button>
-    <button class="rent-button" color="accent" mat-button [routerLink]="['/add-listing/rent']">Rent</button>
+<div class="center-column">
+    <div class="row">
+        <button class="sell-button" color="primary" mat-button [routerLink]="['/add-listing/sell']">Sell House</button>
+        <button class="rent-button" color="accent" mat-button [routerLink]="['/add-listing/rent']">Rent House</button>
+    </div>
+    <div class="row">
+        <button class="rent-button room" color="accent" mat-button>Rent Room</button>
+    </div>
+
 </div>
