--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,15 @@
     margin-top: -10%;
 }
 
+.center-column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin-top: -10%;
+}
+
 .margin-left {
     margin-left: auto;
 }
