--- a/src/app/modules/private/edit-listing/edit-listing.component.html
+++ b/src/app/modules/private/edit-listing/edit-listing.component.html
@@ -2,6 +2,5 @@
 [sellHouseForm]="sellHouseForm" 
 [operationTypes]="operationTypes" 
 [propertyTypes]="propertyTypes"
-[title]="title"
-(publishListing)="publishListing($event)">
+[title]="title">
 </app-sell-house>
