--- a/src/app/modules/private/user-board/user-board.component.html
+++ b/src/app/modules/private/user-board/user-board.component.html
@@ -13,7 +13,8 @@
         [routerLink]="['/settings']">Settings</button>
     </div>
     <div class="button-wrapper">
-      <button mat-raised-button color="primary" class="mat-button width-100">My Listings</button>
+      <button mat-raised-button color="primary" class="mat-button width-100" [routerLink]="['/my-listings']">My
+        Listings</button>
     </div>
   </div>
   <div class="column width-70">
