--- a/src/app/modules/private/my-listings/my-listings.component.html
+++ b/src/app/modules/private/my-listings/my-listings.component.html
@@ -8,15 +8,15 @@
     <div class="column width-70">
 
         <div class=row>
-            <div class="card" *ngFor="let propery of listedProperties">
+            <div class="card" *ngFor="let property of listedProperties; index as i">
                 <div class="card-image">
                     <img [src]="image" width="100%" height="100%">
                 </div>
-                <div> {{propery.price}}</div>
+                <div> {{property.price}}</div>
                 <div class=full-width>
-                    <button class="width-30 button-margin" mat-raised-button color="primary" (click)="edit(propery.id)"> Edit </button>
+                    <button class="width-30 button-margin" mat-raised-button color="primary" (click)="edit(property.id)"> Edit </button>
                     <button class="width-30 button-margin" mat-raised-button color="primary"> Deactivate </button>
-                    <button class="width-30 button-margin" mat-raised-button color="accent"> Delete </button>
+                    <button class="width-30 button-margin" mat-raised-button color="accent" (click)="delete(property.id, i)"> Delete </button>
                 </div>
             </div>
         </div>
